# atc24-artifact

./: .gitignore  .gitmodules  Context.hpp  Domain.hpp  README.md  arm2006.cfg  arm2017.cfg  branches  flake.nix  hello.cpp  install_arm_clangs.sh  install_x86_clangs.sh  justfile  linux_x86_2006.cfg  linux_x86_2017.cfg  main.cpp  meson.build  meson_options.txt  metadata_table.c  pong.cpp  run_arm_specCPU2006.sh  run_fig10.sh  run_fig11.sh  run_fig11_normal_kernel.sh  run_fig12.sh  run_morello_specCPU2006.sh  run_morello_specCPU2017.sh  run_x86_specCPU2006.sh  run_x86_specCPU2017.sh  setup-spec2006.sh  spec2006.patch  spec2017.patch  ubuntu_aarch64.cfg  wasm.cfg  wasm2006.cfg  wasm2017.cfg  x86_constant_fre.sh  x86_disable_hyperthreading.sh
arm_spec2006_config/: linux_arm_c.cfg  linux_arm_nacl.cfg  linux_arm_retcall.cfg
data/: aarch64-ideal-noregsave.csv  aarch64-ideal.csv  morello-ideal-noregsave.csv  morello-ideal.csv  morello-morello-exswitch-noregsave.csv  morello-morello-exswitch.csv  morello-morello.csv  morello-off-ideal-noregsave.csv  morello-off-ideal.csv  x86-64-ideal-fxsave.csv  x86-64-ideal-noregsave.csv  x86-64-ideal.csv  x86-64-mpk-unsafe-shstk.csv  x86-64-mpk-unsafe.csv
domains/: bar.c  baz.c  build-domains.sh  foo.c  pong.c
ideal/: IdealContext.cpp  IdealContext.hpp  IdealDomain.cpp  IdealDomain.hpp  build-trampoline.sh  meson.build  trampoline.aarch64.S  trampoline.aarch64.tcb.S  trampoline.x86_64.S  trampoline.x86_64.tcb.S
ideal/runtime/: rt.h
morello/: MorelloContext.cpp  MorelloContext.hpp  MorelloDomain.cpp  MorelloDomain.hpp  alt-rets-trampoline.S  cheri.h  meson.build  trampoline.S  trampoline.executive.S  trampoline.executivetcb.S  trampoline.tcb.S  util.S  util.hpp
morello/runtime/: rt.h
mte/: benchmark.c  mte.S  pmu-test.c
null/: NullContext.cpp  NullContext.hpp  NullDomain.cpp  NullDomain.hpp  meson.build
null/runtime/: rt.h
scripts/: bootstrap-spec-env.sh  build-clang-aarch64.sh  build-clang-x86-64.sh  fig10.sh  fig11-mainline.sh  fig11-morello.sh  fig12.sh  fig8-x86-64.sh  pack-repo.sh  prelude.sh  regen-spec2006.sh  run-spec2006-aarch64.sh  run-spec2006-morello.sh  run-spec2006-x86-64.sh  run-spec2017-morello.sh  run-spec2017-x86-64.sh  setup-spec2006.sh  setup-spec2017.sh
spec2006-configs/: linux_arm_ldst.cfg  linux_arm_mte.cfg  linux_arm_pac.cfg  linux_arm_reg.cfg  linux_x86_c.cfg  linux_x86_ldst.cfg  morello_specCPU2006.cfg
spec2017-configs/: linux_x86_c.cfg  linux_x86_gs.cfg  linux_x86_nacl.cfg  morello_specCPU2017.cfg
x86_spec2006_config/: linux_x86_1reg.cfg  linux_x86_2reg.cfg  linux_x86_c.cfg  linux_x86_cg.cfg  linux_x86_gs.cfg  linux_x86_mpk.cfg  linux_x86_nacl.cfg  linux_x86_nacl_ldst.cfg  linux_x86_reg.cfg  linux_x86_retcall.cfg
x86_spec2017_config/: linux_x86_mpk.cfg
